2.70 CUDA Error: Not found in cuModuleGetTextRef(&texref,cuModule, name) #39247

Closed
opened 2014-03-18 06:10:10 +01:00 by Stan long · 16 comments

System Information
Operating system and graphics card
Windows 7 x64 16GB memory GTX Titan

Blender Version
Broken: 2.70 2014-03-18 00:07 Hash: eaf387b

Short description of error
Unable to render using Cycles or to use viewport shading of Rendered

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
Open blend file
Change viewport shading to Rendered
Capture.PNG

rooms2.blend

**System Information** Operating system and graphics card Windows 7 x64 16GB memory GTX Titan **Blender Version** Broken: 2.70 2014-03-18 00:07 Hash: eaf387b **Short description of error** Unable to render using Cycles or to use viewport shading of Rendered **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Open blend file Change viewport shading to Rendered ![Capture.PNG](https://archive.blender.org/developer/F81679/Capture.PNG) [rooms2.blend](https://archive.blender.org/developer/F81680/rooms2.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @StanLong

Added subscriber: @StanLong

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Added subscriber: @MartijnBerger

Added subscriber: @MartijnBerger

Juicyfruit, can you check please? As this error only occurs after 2.70, it might be related to the interpolation changes?

Juicyfruit, can you check please? As this error only occurs after 2.70, it might be related to the interpolation changes?

Added subscriber: @GabrielCaraballo

Added subscriber: @GabrielCaraballo
Member

I cannot reproduce this using non titan + hack to set use_texture_storage to true (to simulate sm 35 card)
I will try this tomorrow on GTX 780.

I cannot reproduce this using non titan + hack to set use_texture_storage to true (to simulate sm 35 card) I will try this tomorrow on GTX 780.

Same issue here with GTX Titan, Ubuntu 12.04 64bits, and Blender 930765f 64bits

Same issue here with GTX Titan, Ubuntu 12.04 64bits, and Blender 930765f 64bits

Added subscriber: @PatriceBertrand

Added subscriber: @PatriceBertrand
Member

I think I have found the problem. Need to test tomorrow and hopefull first reproduce then fix the problem

I think I have found the problem. Need to test tomorrow and hopefull first reproduce then fix the problem

Added subscriber: @RolfJawarsch

Added subscriber: @RolfJawarsch

I'm not an expert but i have the same issue on sm_50, but i use cuda toolkit v6.0 to build the kernel for the GTX750ti.
But i think this also applies to sm_35, so i told it dingto.
I reproduce it with a sm_20 kernel on the GTX570, which was built with the CUDA toolkit v5.0, to exclude this possibility it is the "cuda 6.0/sm50"

For this, i have change :
device_cuda.ccp
225 use_texture_storage = (cuDevArchitecture < 350)
225 use_texture_storage = (cuDevArchitecture < 200)

kernel_compat_cuda.h
63 #if CUDA_ARCH < 350
63 #if CUDA_ARCH < 200

And it works :D i have the same problem with the gtx570
CUDA Error: Not found in cuModuleGetTextRef(&texref,cuModule, name)
on simple Scene or total crash on more complex scene

I'm not an expert but i have the same issue on sm_50, but i use cuda toolkit v6.0 to build the kernel for the GTX750ti. But i think this also applies to sm_35, so i told it dingto. I reproduce it with a sm_20 kernel on the GTX570, which was built with the CUDA toolkit v5.0, to exclude this possibility it is the "cuda 6.0/sm50" For this, i have change : device_cuda.ccp 225 use_texture_storage = (cuDevArchitecture < 350) 225 use_texture_storage = (cuDevArchitecture < 200) kernel_compat_cuda.h 63 #if __CUDA_ARCH__ < 350 63 #if __CUDA_ARCH__ < 200 And it works :D i have the same problem with the gtx570 CUDA Error: Not found in cuModuleGetTextRef(&texref,cuModule, name) on simple Scene or total crash on more complex scene

This issue was referenced by blender/blender-addons-contrib@28c1a860e2

This issue was referenced by blender/blender-addons-contrib@28c1a860e20085afa49ecd79777f45e93a8eebff

This issue was referenced by 28c1a860e2

This issue was referenced by 28c1a860e20085afa49ecd79777f45e93a8eebff
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 28c1a860e2.

Closed by commit 28c1a860e2.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39247
No description provided.