Fix T39247

Changes to interpolation break texture allocation on sm35 and greater.